2006-07-31  Douglas Bates  <bates@R-project.org>

	* NAMESPACE, src/lmer.c, R/lmer.R (hatTrace):  Add the hatTrace
	function which calls the C function mer_hat_trace2.
	
	* man/ranef.Rd: Include description of "postVar" argument.

2006-07-31  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE:    change  "correlation" to "corMatrix"
	* R/AllClass.R: to avoid clash with S3 class in 'nlme'.
	* R/dpoMatrix.R: dito
	* R/lmer.R:	 dito

2006-07-28  Douglas Bates  <bates@R-project.org>

	* src/lmer.c (internal_mer_RZXinv): Split the calculation of the
	RZXinv slot's contents into a separate internal function that can
	be used in mer_hat_trace.

2006-07-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R: Coercions "Matrix" -> (sparse|dense)Matrix
	via new smart
	* R/Auxiliaries.R (as_Csparse, as_dense, .M.shapse): new
	utility functions.


2006-07-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Csparse.R (tril, triu, band): do return *triangular* classed
	matrices when appropriate; band() even symmetric ones.
	(replCmat): extend to potentially all "CsparseMatrix"
	* R/Tsparse.R (replTmat): extend to all "TsparseMatrix"; hence
	allow subassignment for special sparse matrices.

	* R/Auxiliaries.R (as_geClass): factor out the  .M.kind() functionality

	* src/lmer.c (mer_MCMCsamp, glmer_MCMCsamp): new 'verbose'
	argument; in glmer_*(): print only if(verbose).

	speed-optimize a few places by moving REAL(.) out of loops.

	* src/lmer.h, src/init.h, R/lmer.R:  related to above.

2006-07-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R("["): disable ("Matrix", i = "logical", j = "missing"),
		since that wrongly triggers also for M[ logi , ]

	* R/denseMatrix.R: "[" methods now also work e.g. when indexing
	a symmetric matrix that results in a non-symmetric one.
	* R/Auxiliaries.R (as_geClass): new function used in "[" above.

	* R/dMatrix.R: make round(M) work as round(M, 0)
